# badiff

./: .gitignore  CMakeLists.txt  Makefile  consolidate.sh  glue.js
.cache/clangd/index/: cJSON.c.29F3484E53E937B2.idx  cJSON.h.857EDFB4B4528E72.idx  cjson_add.c.1DE075449F57B049.idx  cjson_read_fuzzer.c.0B8612B43AA9857C.idx  common.h.580079925D644D82.idx  compare_tests.c.902FEBBEBAF7C5A3.idx  diff.c.648021A8842E641E.idx  diff.h.65769B36FEB93A97.idx  find_middle.c.49FBAD114CBFC80C.idx  find_middle.h.BD41743E2990E6FF.idx  fuzz_main.c.0CCA0D66BB44D22F.idx  main.c.57BEBB6D1C7ED0C2.idx  minify_tests.c.93B9BF4A09A23DA1.idx  misc_tests.c.DDCAA4EC55806890.idx  parse_array.c.61A22A2787896835.idx  parse_examples.c.8B7872F893D3FC8D.idx  parse_hex4.c.7B5AA1590ABAF3B6.idx  parse_number.c.BB2CF70DF1AC3808.idx  parse_object.c.2EBEF2B06627C7BF.idx  parse_string.c.4E26BF7F988172B3.idx  parse_value.c.F07DDE3A8D4DEDDA.idx  parse_with_opts.c.C65EFB3DEED6669F.idx  print_array.c.66619D46A2D1618D.idx  print_number.c.434BBEE50DB503E9.idx  print_object.c.A9BA4AEB2D14E318.idx  print_string.c.E71111AF4C07C861.idx  print_value.c.3E54616F2F96A061.idx  readme_examples.c.445BA1E8086F3F0E.idx  ses.c.A872F096998AAB92.idx  ses.h.4C2406FCEF1C3200.idx  test.c.8D7EBE4DAC914B88.idx  unity.c.29EBBEBE4BCA2C31.idx  unity.h.EC49765718157C2F.idx  unity_config.h.5DD576EA41EC8259.idx  (+1 more)
build_wasm/: CMakeCache.txt  Makefile  cmake_install.cmake
frediff/: diff.js
src/: diff.c  diff.h  find_middle.c  find_middle.h  log.c  main.c  ses.c  ses.h
testfiles/: letter_2_snippet_1818.txt  letter_2_snippet_1831.txt
